[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Fernando Montero <fernando.montero.perez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
py-algorand-sdk = "^1.10.0"
mypy = "^0.931"
requests = "^2.27.1"
black = "^21.12b0"
pyteal = "^0.10.1"
python-dotenv = "^0.19.2"
[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
